# CodeBall

./: CMakeLists.txt  CodeCup.kdev4  MyStrategy.cpp  README.md  build.sh  codeball2018  run.sh
AddedClasses/: Line.h  Player.h  Point.h
model/: Ball.h
solve/AddedClasses/: Constants.h  Forward.h  Goalkeeper.h  VectorF.h
